--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html" style="margin-top: 10px;">
-            <img src="images/techmanch.png" alt="Tech Manch" style="width:70px;height:70px;padding: 10px;">
+            <img src="images/favicon.png" alt="Tech Manch" style="width:70px;height:70px;padding: 10px;">
             <span>
               Tech Manch
             </span>
@@ -71,13 +71,16 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="service.html">Services</a>
+                <a class="nav-link" href="">Services</a>
+                <!-- <a class="nav-link" href="service.html">Services</a> -->
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="why.html">Why Us</a>
+                <a class="nav-link" href="">Why Us</a>
+                <!-- <a class="nav-link" href="why.html">Why Us</a> -->
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="team.html">Team</a>
+                <a class="nav-link" href="">Team</a>
+                <!-- <a class="nav-link" href="team.html">Team</a> -->
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
@@ -148,7 +151,8 @@
                       YouTube Channel
                     </h1>
                     <p>
-                      Subscribe my YouTube Channel and grow your technical knowledge
+                      Please subscribe my youtube channel and press bell icon for notification of latest video updates
+                      and grow your technical knowledge
                     </p>
                     <div class="btn-box">
                       <a href="https://www.youtube.com/@techmanch" class="btn1">
@@ -174,10 +178,11 @@
                       Tech Manch
                     </h1>
                     <p>
-
+                      In our youtube channel you will get latest trending technical lectures and you can boost your
+                      skill
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="https://www.youtube.com/@techmanch" class="btn1">
                         Read More
                       </a>
                     </div>
@@ -185,7 +190,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img-3.png" alt="">
+                    <img src="images/about-img.jpeg" alt="">
                   </div>
                 </div>
               </div>
@@ -276,32 +281,36 @@
           About <span>Us</span>
         </h2>
         <p>
-          Magni quod blanditiis non minus sed aut voluptatum illum quisquam aspernatur ullam vel beatae rerum ipsum
-          voluptatibus
+
         </p>
       </div>
       <div class="row">
         <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/about-img.png" alt="">
+            <img src="images/about-me.jpg" alt="">
           </div>
         </div>
         <div class="col-md-6">
           <div class="detail-box">
             <h3>
-              We Are Finexo
+              <!-- We Are Finexo -->
             </h3>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-              in some form, by injected humour, or randomised words which don't look even slightly believable. If you
-              are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-              the middle of text. All
+              Join us on a thrilling journey
+              through the dynamic world of technology, where innovation and exploration never cease. Whether you're a
+              seasoned tech enthusiast or just beginning to unravel the wonders of the digital realm, Tech Manch is here
+              to empower you with knowledge, insights, and exciting discoveries. Get ready to dive into the latest tech
+              reviews, insightful tutorials, cutting-edge gadget showcases, software updates, and much more. Our
+              passionate team of tech aficionados is dedicated to keeping you updated with the most intriguing trends,
+              breakthroughs, and tips to enhance your tech experience. Don't miss out on the latest tech updates!
+              Subscribe to Tech Manch now and be a part of our vibrant community where tech enthusiasts from all walks
+              of life come together to celebrate the marvels of innovation.
             </p>
-            <p>
+            <!-- <p>
               Molestiae odio earum non qui cumque provident voluptates, repellendus exercitationem, possimus at iste
               corrupti officiis unde alias eius ducimus reiciendis soluta eveniet. Nobis ullam ab omnis quasi expedita.
-            </p>
-            <a href="">
+            </p> -->
+            <a href="https://www.youtube.com/@techmanch">
               Read More
             </a>
           </div>
@@ -314,7 +323,7 @@
 
   <!-- why section -->
 
-  <section class="why_section layout_padding">
+  <!-- <section class="why_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -397,12 +406,12 @@
         </a>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- end why section -->
 
   <!-- team section -->
-  <section class="team_section layout_padding">
+  <!-- <section class="team_section layout_padding">
     <div class="container-fluid">
       <div class="heading_container heading_center">
         <h2 class="">
@@ -543,13 +552,13 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- end team section -->
 
 
   <!-- client section -->
 
-  <section class="client_section layout_padding">
+  <!-- <section class="client_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center psudo_white_primary mb_45">
         <h2>
@@ -653,7 +662,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- end client section -->
 
@@ -672,34 +681,34 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  Greater Noida Sector 16
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call +91 8826964705
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  AkshayMCA2013@gmail.com
                 </span>
               </a>
             </div>
           </div>
           <div class="info_social">
-            <a href="">
+            <a href="https://www.facebook.com/FreeSoftwareIndiaDevelopment/">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://twitter.com/tech_manch">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://www.linkedin.com/company/techmanch/?viewAsMember=true">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/tech_manch/">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -710,8 +719,7 @@
               Info
             </h4>
             <p>
-              necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin
-              words, combined with a handful
+              Please subscribe my youtube channel and press bell icon for notification of latest video updates
             </p>
           </div>
         </div>
@@ -727,13 +735,16 @@
               <a class="" href="about.html">
                 About
               </a>
-              <a class="" href="service.html">
+              <!-- <a class="" href="service.html"> -->
+              <a class="" href="">
                 Services
               </a>
-              <a class="" href="why.html">
+              <!-- <a class="" href="why.html"> -->
+              <a class="" href="">
                 Why Us
               </a>
-              <a class="" href="team.html">
+              <a class="" href="">
+                <!-- <a class="" href="team.html"> -->
                 Team
               </a>
             </div>
