--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Services</a>
+                <a class="nav-link" href="">Articles in PDF</a>
                 <!-- <a class="nav-link" href="service.html">Services</a> -->
               </li>
               <li class="nav-item">
@@ -323,32 +323,58 @@
 
   <!-- why section -->
 
-  <!-- <section class="why_section layout_padding">
+  <section class="why_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Why Choose <span>Us</span>
+          Read our awesome <span>Articles</span>
         </h2>
       </div>
       <div class="why_container">
         <div class="box">
-          <div class="img-box">
-            <img src="images/w1.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Expert Management
-            </h5>
-            <p>
-              Incidunt odit rerum tenetur alias architecto asperiores omnis cumque doloribus aperiam numquam! Eligendi
-              corrupti, molestias laborum dolores quod nisi vitae voluptate ipsa? In tempore voluptate ducimus officia
-              id, aspernatur nihil.
-              Tempore laborum nesciunt ut veniam, nemo officia ullam repudiandae repellat veritatis unde reiciendis
-              possimus animi autem natus
-            </p>
-          </div>
+          <!-- <div class="img-box"> -->
+          <a href="https://medium.com/p/8a66c3555b30">
+            <div class="detail-box">
+              <h5>
+                React js useMemo Hook
+              </h5>
+              <p style="width: 700px;align-self: flex-start;">
+                Momoization Concept,
+                useMemo,
+                react.memo,
+                Live Demo,
+                useMemo vs useCallback,
+                What problem solved in useMemo ?,
+                Why need useMemo ?,
+                Does useMemo has any disadvantage?
+              </p>
+            </div>
+            <img height="400" width="700"
+              src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*mu7Uf1yATDK3V6NkiIk85A.png" alt="">
+          </a>
+          <!-- </div> -->
+
         </div>
+
         <div class="box">
+          <!-- <div class="img-box"> -->
+          <a href="https://medium.com/@akshaymca2013/usememo-hook-vs-purecomponent-b7f8fca12c2b">
+            <div class="detail-box">
+              <h5>
+                useMemo Hook vs PureComponent
+              </h5>
+              <p style="width: 700px;align-self: flex-start;">
+
+              </p>
+            </div>
+            <img height="400" width="700"
+              src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*nd953QJVBLuxAFcu_35eNw.png" alt="">
+          </a>
+          <!-- </div> -->
+
+        </div>
+
+        <!-- <div class="box">
           <div class="img-box">
             <img src="images/w2.png" alt="">
           </div>
@@ -398,15 +424,15 @@
               possimus animi autem natus
             </p>
           </div>
-        </div>
+        </div> -->
       </div>
       <div class="btn-box">
-        <a href="">
+        <a href="https://medium.com/@akshaymca2013">
           Read More
         </a>
       </div>
     </div>
-  </section> -->
+  </section>
 
   <!-- end why section -->
 
@@ -737,7 +763,7 @@
               </a>
               <!-- <a class="" href="service.html"> -->
               <a class="" href="">
-                Services
+                Articles in PDF
               </a>
               <!-- <a class="" href="why.html"> -->
               <a class="" href="">
