fix image issue

--- a/index.html
+++ b/index.html
@@ -338,7 +338,8 @@
               <h5>
                 React js useMemo Hook
               </h5>
-              <p style="width: 700px;align-self: flex-start;">
+              <p>
+                <!-- style=" width: 400px;align-self: flex-start;" -->
                 Momoization Concept,
                 useMemo,
                 react.memo,
@@ -349,8 +350,11 @@
                 Does useMemo has any disadvantage?
               </p>
             </div>
-            <img height="400" width="700"
-              src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*mu7Uf1yATDK3V6NkiIk85A.png" alt="">
+            <div>
+              <img width="100%"
+                src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*mu7Uf1yATDK3V6NkiIk85A.png" alt="">
+            </div>
+
           </a>
           <!-- </div> -->
 
@@ -363,12 +367,12 @@
               <h5>
                 useMemo Hook vs PureComponent
               </h5>
-              <p style="width: 700px;align-self: flex-start;">
+              <p>
 
               </p>
             </div>
-            <img height="400" width="700"
-              src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*nd953QJVBLuxAFcu_35eNw.png" alt="">
+            <img width="100%" src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*nd953QJVBLuxAFcu_35eNw.png"
+              alt="">
           </a>
           <!-- </div> -->
 
