added pdf viewer

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+  <!-- WhatsApp -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+
+
 
 </head>
 
@@ -71,9 +76,10 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Articles in PDF</a>
-                <!-- <a class="nav-link" href="service.html">Services</a> -->
+                <!-- <a class="nav-link" href="ebooks/tiket.pdf">e-Books</a> -->
+                <a class="nav-link" href="service.html">e-Books</a>
               </li>
+
               <li class="nav-item">
                 <a class="nav-link" href="">Why Us</a>
                 <!-- <a class="nav-link" href="why.html">Why Us</a> -->
@@ -333,7 +339,7 @@
       <div class="why_container">
         <div class="box">
           <!-- <div class="img-box"> -->
-          <a href="https://medium.com/p/8a66c3555b30">
+          <a target="_blank" href="https://medium.com/p/8a66c3555b30">
             <div class="detail-box">
               <h5>
                 React js useMemo Hook
@@ -362,7 +368,7 @@
 
         <div class="box">
           <!-- <div class="img-box"> -->
-          <a href="https://medium.com/@akshaymca2013/usememo-hook-vs-purecomponent-b7f8fca12c2b">
+          <a target="_blank" href="https://medium.com/@akshaymca2013/usememo-hook-vs-purecomponent-b7f8fca12c2b">
             <div class="detail-box">
               <h5>
                 useMemo Hook vs PureComponent
@@ -767,7 +773,7 @@
               </a>
               <!-- <a class="" href="service.html"> -->
               <a class="" href="">
-                Articles in PDF
+                eBooks
               </a>
               <!-- <a class="" href="why.html"> -->
               <a class="" href="">
@@ -795,6 +801,20 @@
     </div>
   </section>
 
+
+  <!-- render the button and direct it to wa.me -->
+  <!-- <a href="https://wa.me/918826964705?text=Hello" class="floating" target="_blank">
+    <i class="fab fa-whatsapp fab-icon"></i>
+  </a> -->
+
+  <!-- <a href="https://api.whatsapp.com/send?phone=51955081075&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
+    class="floating" target="_blank">
+    <i class="fa fa-whatsapp floating"></i>
+  </a> -->
+  <a href="https://api.whatsapp.com/send?phone=51955081075&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
+    class="floating" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
+  </a>
   <!-- end info section -->
 
   <!-- footer section -->
@@ -806,6 +826,8 @@
       </p>
     </div>
   </section>
+
+
   <!-- footer section -->
 
   <!-- jQery -->
@@ -825,7 +847,8 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
   </script>
   <!-- End Google Map -->
-
+  <!-- load font awesome for icons -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" /> -->
 </body>
 
 </html>
