--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </h1>
                     <p>
                       Please subscribe my youtube channel and press bell icon for notification of latest video updates
-                      and grow your technical knowledge
+                      and grow your technical knowledge.
                     </p>
                     <div class="btn-box">
                       <a href="https://www.youtube.com/@techmanch" class="btn1">
