adding drive word data

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <!-- header section strats -->
+    <!---------------------------------------- header section strats -------------------------------------->
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
@@ -81,7 +81,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="">Why Us</a>
+                <a class="nav-link" href="tech_study.html">Tech Study</a>
                 <!-- <a class="nav-link" href="why.html">Why Us</a> -->
               </li>
               <li class="nav-item">
@@ -101,7 +101,9 @@
         </nav>
       </div>
     </header>
-    <!-- end header section -->
+
+    <!----------------------------------------- end header section ------------------------------------->
+
     <!-- slider section -->
     <section class="slider_section ">
       <div id="customCarousel1" class="carousel slide" data-ride="carousel">
@@ -811,7 +813,7 @@
     class="floating" target="_blank">
     <i class="fa fa-whatsapp floating"></i>
   </a> -->
-  <a href="https://api.whatsapp.com/send?phone=51955081075&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
+  <a href="https://api.whatsapp.com/send?phone=+918826974705&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
     class="floating" target="_blank">
     <i class="fa fa-whatsapp my-float"></i>
   </a>
