--- a/modules/ebooks/service.html
+++ b/modules/ebooks/service.html
@@ -45,17 +45,14 @@
       </div>
     </div>
 
-
-    <!---------------------------------------- header section strats -------------------------------------->
+    <!-- header section strats -->
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html" style="margin-top: 10px;">
-            <img src="images/favicon.png" alt="Tech Manch" style="width:70px;height:70px;padding: 10px;">
+          <a class="navbar-brand" href="index.html">
             <span>
-              Tech Manch
+              Finexo
             </span>
-
           </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -65,24 +62,20 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  ">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <li class="nav-item ">
+                <a class="nav-link" href="index.html">Home </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html"> About</a>
               </li>
-              <li class="nav-item">
-                <!-- <a class="nav-link" href="ebooks/tiket.pdf">e-Books</a> -->
-                <a class="nav-link" href="service.html">e-Books</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="">Why Us</a>
-                <!-- <a class="nav-link" href="why.html">Why Us</a> -->
+              <li class="nav-item active">
+                <a class="nav-link" href="service.html">Services <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Team</a>
-                <!-- <a class="nav-link" href="team.html">Team</a> -->
+                <a class="nav-link" href="why.html">Why Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="team.html">Team</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
@@ -97,55 +90,98 @@
         </nav>
       </div>
     </header>
-
-    <!----------------------------------------- end header section ------------------------------------->
+    <!-- end header section -->
   </div>
 
-  <!-- about section -->
+  <iframe src="assets/ebooks/React_Native_in_depth.pdf" style="width: 100%;height: 800px;border: none;"></iframe>
+  <!-- service section -->
 
-  <section class="about_section layout_padding">
-    <div class="container  ">
-      <div class="heading_container heading_center">
-        <h2>
-          About <span>Us</span>
-        </h2>
+  <section class="service_section layout_padding">
+    <!-- <embed src="ebooks/React_Native_in_depth.pdf" width="800px" height="2100px" /> -->
 
-      </div>
-      <div class="row">
-        <div class="col-md-6 ">
-          <div class="img-box">
-            <img src="images/about-me.jpg" alt="">
+    <!-- <div class="service_container">
+
+      <div class="container ">
+        <div class="heading_container heading_center">
+          <h2>
+            Our <span>Services</span>
+          </h2>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+          </p>
+        </div>
+        <div class="row">
+          <div class="col-md-4 ">
+            <div class="box ">
+              <div class="img-box">
+                <img src="images/s1.png" alt="">
+              </div>
+              <div class="detail-box">
+                <h5>
+                  Currency Wallet
+                </h5>
+                <p>
+                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                  The
+                  point of using
+                </p>
+                <a href="">
+                  Read More
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 ">
+            <div class="box ">
+              <div class="img-box">
+                <img src="images/s2.png" alt="">
+              </div>
+              <div class="detail-box">
+                <h5>
+                  Security Storage
+                </h5>
+                <p>
+                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                  The
+                  point of using
+                </p>
+                <a href="">
+                  Read More
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 ">
+            <div class="box ">
+              <div class="img-box">
+                <img src="images/s3.png" alt="">
+              </div>
+              <div class="detail-box">
+                <h5>
+                  Expert Support
+                </h5>
+                <p>
+                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                  The
+                  point of using
+                </p>
+                <a href="">
+                  Read More
+                </a>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="detail-box">
-            <!-- <h3>
-              We Are Finexo
-            </h3> -->
-            <p>
-
-            </p>
-            <p>
-              Join us on a thrilling journey
-              through the dynamic world of technology, where innovation and exploration never cease. Whether you're a
-              seasoned tech enthusiast or just beginning to unravel the wonders of the digital realm, Tech Manch is here
-              to empower you with knowledge, insights, and exciting discoveries. Get ready to dive into the latest tech
-              reviews, insightful tutorials, cutting-edge gadget showcases, software updates, and much more. Our
-              passionate team of tech aficionados is dedicated to keeping you updated with the most intriguing trends,
-              breakthroughs, and tips to enhance your tech experience. Don't miss out on the latest tech updates!
-              Subscribe to Tech Manch now and be a part of our vibrant community where tech enthusiasts from all walks
-              of life come together to celebrate the marvels of innovation.
-            </p>
-            <a href="">
-              Read More
-            </a>
-          </div>
+        <div class="btn-box">
+          <a href="">
+            View All
+          </a>
         </div>
       </div>
-    </div>
+    </div> -->
   </section>
 
-  <!-- end about section -->
+  <!-- end service section -->
 
   <!-- info section -->
 
@@ -161,19 +197,19 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Greater Noida Sector 16
+                  Location
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +91 8826964705
+                  Call +01 1234567890
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  AkshayMCA2013@gmail.com
+                  demo@gmail.com
                 </span>
               </a>
             </div>
