--- a/tech_study.html
+++ b/tech_study.html
@@ -81,8 +81,7 @@
                 <!-- <a class="nav-link" href="why.html">Why Us</a> -->
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Team</a>
-                <!-- <a class="nav-link" href="team.html">Team</a> -->
+                <a class="nav-link" href="tech_study.html">Tech Study</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
@@ -105,43 +104,21 @@
 
   <section class="about_section layout_padding">
     <div class="container  ">
-      <div class="heading_container heading_center">
-        <h2>
-          About <span>Us</span>
-        </h2>
+      <h4>
+        <a target="_blank"
+          href="https://docs.google.com/document/d/e/2PACX-1vTA7uslxxfwgRmEJ97eHSo9exw9cVrxqhL_Y4tzWX60Biqunm1aNP1fkXl1p-Tiz2lVnsVdGDvyBmmX/pub">ES6</a>
+      </h4>
+      <h4>
+        <a target="_blank"
+          href="https://docs.google.com/document/d/e/2PACX-1vQdnN5sttpwuxHeLbJt38GAOdKxh06AIdnN5FGSUeSuz0uzAdprU3vcTDkqQVZMHB3YQSH98vSWdANl/pub">React
+          Native</a>
+      </h4>
+      <h4>
+        <a target="_blank"
+          href="https://docs.google.com/document/d/e/2PACX-1vSEHcGeG92CY41TAMVmlJcBboq8bQ-x_UAhcrZqwaWvh9zxXDGrLiNoRvrTRZv4r49RYdQde4_RW_d8/pub">
+          Lambda Expressions</a>
+      </h4>
 
-      </div>
-      <div class="row">
-        <div class="col-md-6 ">
-          <div class="img-box">
-            <img src="images/about-me.jpg" alt="">
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="detail-box">
-            <!-- <h3>
-              We Are Finexo
-            </h3> -->
-            <p>
-
-            </p>
-            <p>
-              Join us on a thrilling journey
-              through the dynamic world of technology, where innovation and exploration never cease. Whether you're a
-              seasoned tech enthusiast or just beginning to unravel the wonders of the digital realm, Tech Manch is here
-              to empower you with knowledge, insights, and exciting discoveries. Get ready to dive into the latest tech
-              reviews, insightful tutorials, cutting-edge gadget showcases, software updates, and much more. Our
-              passionate team of tech aficionados is dedicated to keeping you updated with the most intriguing trends,
-              breakthroughs, and tips to enhance your tech experience. Don't miss out on the latest tech updates!
-              Subscribe to Tech Manch now and be a part of our vibrant community where tech enthusiasts from all walks
-              of life come together to celebrate the marvels of innovation.
-            </p>
-            <a href="">
-              Read More
-            </a>
-          </div>
-        </div>
-      </div>
     </div>
   </section>
 
