--- a/service.html
+++ b/service.html
@@ -45,14 +45,16 @@
       </div>
     </div>
 
-    <!-- header section strats -->
+    <!---------------------------------------- header section strats -------------------------------------->
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="index.html" style="margin-top: 10px;">
+            <img src="images/favicon.png" alt="Tech Manch" style="width:70px;height:70px;padding: 10px;">
             <span>
-              Finexo
+              Tech Manch
             </span>
+
           </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -62,20 +64,24 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  ">
-              <li class="nav-item ">
-                <a class="nav-link" href="index.html">Home </a>
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html"> About</a>
               </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="service.html">Services <span class="sr-only">(current)</span> </a>
+              <li class="nav-item">
+                <!-- <a class="nav-link" href="ebooks/tiket.pdf">e-Books</a> -->
+                <a class="nav-link" href="service.html">e-Books</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="">Why Us</a>
+                <!-- <a class="nav-link" href="why.html">Why Us</a> -->
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="why.html">Why Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="team.html">Team</a>
+                <a class="nav-link" href="">Team</a>
+                <!-- <a class="nav-link" href="team.html">Team</a> -->
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
@@ -90,44 +96,44 @@
         </nav>
       </div>
     </header>
-    <!-- end header section -->
+
+    <!----------------------------------------- end header section ------------------------------------->
   </div>
 
-  <iframe src="ebooks/React_Native_in_depth.pdf"
-    style="width: 100%;height: 800px;border: none;padding-left: 20%;padding-right: 20%;"></iframe>
+  <!-- <iframe src="assets/ebooks/React_Native_in_depth.pdf" style="width: 100%;height: 800px;border: none;"></iframe> -->
   <!-- service section -->
 
   <section class="service_section layout_padding">
     <!-- <embed src="ebooks/React_Native_in_depth.pdf" width="800px" height="2100px" /> -->
 
-    <!-- <div class="service_container">
+    <div class="service_container">
 
       <div class="container ">
         <div class="heading_container heading_center">
           <h2>
-            Our <span>Services</span>
+            Our <span>e-books</span>
           </h2>
           <p>
-            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+            Multiple free Tech e-bookes available here
           </p>
         </div>
         <div class="row">
           <div class="col-md-4 ">
             <div class="box ">
               <div class="img-box">
-                <img src="images/s1.png" alt="">
+                <img src="https://reactnative.dev/img/header_logo.svg" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  Currency Wallet
+                  React Native
                 </h5>
                 <p>
                   fact that a reader will be distracted by the readable content of a page when looking at its layout.
                   The
                   point of using
                 </p>
-                <a href="">
-                  Read More
+                <a href="about.html">
+                  Read e-book
                 </a>
               </div>
             </div>
@@ -179,7 +185,7 @@
           </a>
         </div>
       </div>
-    </div> -->
+    </div>
   </section>
 
   <!-- end service section -->
