--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="react/react-interview-questions-github.html">
+                  React Interview
+                </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
@@ -785,6 +790,9 @@
                 <!-- <a class="" href="team.html"> -->
                 Team
               </a>
+              <a class="" href="react/react-interview-questions-github.html">
+                React Interview
+              </a>
             </div>
           </div>
         </div>
@@ -813,7 +821,7 @@
     class="floating" target="_blank">
     <i class="fa fa-whatsapp floating"></i>
   </a> -->
-  <a href="https://api.whatsapp.com/send?phone=+918826974705&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
+  <a href="https://api.whatsapp.com/send?phone=+918826964705&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
     class="floating" target="_blank">
     <i class="fa fa-whatsapp my-float"></i>
   </a>
