--- a/react/react-interview-questions-github.html
+++ b/react/react-interview-questions-github.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="../images/favicon.png" type="">
 
-  <title> Finexo </title>
+  <title> Tech Manch </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="../css/bootstrap.css" />
@@ -51,7 +51,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="../index.html">
             <span>
-              Finexo
+              Tech Manch
             </span>
           </a>
 
