--- a/react/react-interview-questions-github.html
+++ b/react/react-interview-questions-github.html
@@ -49,10 +49,12 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="../index.html">
+          <a class="navbar-brand" href="../index.html" style="margin-top: 10px;">
+            <img src="../images/favicon.png" alt="Tech Manch" style="width:70px;height:70px;padding: 10px;">
             <span>
               Tech Manch
             </span>
+
           </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
