update youtube video url

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                       and grow your technical knowledge.
                     </p>
                     <div class="btn-box">
-                      <a href="https://www.youtube.com/@techmanch" class="btn1">
+                      <a href="https://www.youtube.com/@myakcoding" class="btn1">
                         Go To Channel
                       </a>
                     </div>
@@ -195,7 +195,7 @@
                       skill
                     </p>
                     <div class="btn-box">
-                      <a href="https://www.youtube.com/@techmanch" class="btn1">
+                      <a href="https://www.youtube.com/@myakcoding" class="btn1">
                         Read More
                       </a>
                     </div>
@@ -238,7 +238,7 @@
         <div class="row">
           <div class="col-md-4 ">
             <div class="box ">
-              <iframe width="380" height="325" src="https://www.youtube.com/embed/IqjYUD0h_Nk">
+              <iframe width="380" height="325" src="https://www.youtube.com/embed/aeL5OjxLjnw">
               </iframe>
               <!-- <div class="img-box">
                 <img src="images/s1.png" alt="">
@@ -260,21 +260,21 @@
           </div>
           <div class="col-md-4 ">
             <div class="box">
-              <iframe width="380" height="325" src="https://www.youtube.com/embed/Ipg2LS8ZQ8U"
+              <iframe width="380" height="325" src="https://www.youtube.com/embed/UZZ21XwV-0c&"
                 style="margin-left: 10px;">
               </iframe>
             </div>
           </div>
           <div class="col-md-4 ">
             <div class="box ">
-              <iframe width="380" height="325" src="https://www.youtube.com/embed/YKNT7kgQEJo"
+              <iframe width="380" height="325" src="https://www.youtube.com/embed/_Ex8TlY6-sE"
                 style="margin-left: 10px;">
               </iframe>
             </div>
           </div>
         </div>
         <div class="btn-box">
-          <a href="https://www.youtube.com/@techmanch">
+          <a href="https://www.youtube.com/@myakcoding">
             View All
           </a>
         </div>
@@ -323,7 +323,7 @@
               Molestiae odio earum non qui cumque provident voluptates, repellendus exercitationem, possimus at iste
               corrupti officiis unde alias eius ducimus reiciendis soluta eveniet. Nobis ullam ab omnis quasi expedita.
             </p> -->
-            <a href="https://www.youtube.com/@techmanch">
+            <a href="https://www.youtube.com/@myakcoding">
               Read More
             </a>
           </div>
