make video rounded corner

--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
         <div class="row">
           <div class="col-md-4 ">
             <div class="box ">
-              <iframe width="380" height="325" src="https://www.youtube.com/embed/aeL5OjxLjnw">
+              <iframe class="rounded-corner-normal" width="380" height="325"
+                src="https://www.youtube.com/embed/aeL5OjxLjnw">
               </iframe>
               <!-- <div class="img-box">
                 <img src="images/s1.png" alt="">
@@ -260,15 +261,15 @@
           </div>
           <div class="col-md-4 ">
             <div class="box">
-              <iframe width="380" height="325" src="https://www.youtube.com/embed/UZZ21XwV-0c&"
-                style="margin-left: 10px;">
+              <iframe class="rounded-corner-normal" width="380" height="325"
+                src="https://www.youtube.com/embed/UZZ21XwV-0c" style="margin-left: 10px;">
               </iframe>
             </div>
           </div>
           <div class="col-md-4 ">
-            <div class="box ">
-              <iframe width="380" height="325" src="https://www.youtube.com/embed/_Ex8TlY6-sE"
-                style="margin-left: 10px;">
+            <div class="box">
+              <iframe class="rounded-corner-normal" width="380" height="325"
+                src="https://www.youtube.com/embed/_Ex8TlY6-sE" style="margin-left: 10px;">
               </iframe>
             </div>
           </div>
