make video rounded corner

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="img-box">
+                  <div class="img-box rounded-corner-normal">
                     <img src="images/slider-img-2.png" alt="">
                   </div>
                 </div>
@@ -300,7 +300,7 @@
       </div>
       <div class="row">
         <div class="col-md-6 ">
-          <div class="img-box">
+          <div class="img-box rounded-corner-normal">
             <img src="images/about-me.jpg" alt="">
           </div>
         </div>
@@ -365,7 +365,7 @@
               </p>
             </div>
             <div>
-              <img width="100%"
+              <img class="rounded-corner-normal" width="100%"
                 src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*mu7Uf1yATDK3V6NkiIk85A.png" alt="">
             </div>
 
@@ -385,8 +385,8 @@
 
               </p>
             </div>
-            <img width="100%" src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*nd953QJVBLuxAFcu_35eNw.png"
-              alt="">
+            <img class="rounded-corner-normal" width="100%"
+              src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*nd953QJVBLuxAFcu_35eNw.png" alt="">
           </a>
           <!-- </div> -->
 
